--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Book Match Quiz</title>
-    <link href="/stellies-frontend/public/dist/styles.css" rel="stylesheet" />
+    <link href="/dist/styles.css" rel="stylesheet" />
   </head>
   <body class="bg-gray-50 flex items-center justify-center min-h-screen p-4">
     <div class="max-w-md w-full bg-white rounded-2xl shadow p-6 space-y-6">
