--- a/index.html
+++ b/index.html
@@ -7,12 +7,67 @@
     <link href="/dist/styles.css" rel="stylesheet" />
   </head>
   <body class="min-h-screen flex items-center justify-center bg-black p-4">
-    <div class="w-full max-w-2xl bg-white text-black rounded-2xl shadow-lg p-6 space-y-6">
+    <div class="w-full max-w-2xl bg-white text-black rounded-xl shadow-lg p-6 space-y-6">
       <h1 class="text-3xl font-bold text-emerald-700 text-center">Find Your Next Read</h1>
 
-      <!-- Questions -->
-      <div id="quiz-container" class="space-y-6">
-        <!-- Each question block will be inserted here -->
+      <!-- Question 1 -->
+      <div id="q1" class="space-y-2">
+        <p class="font-medium">1. What kind of story pace are you in the mood for?</p>
+        <div class="grid gap-2">
+          <button data-q="q1" data-a="Fast and plot-heavy" class="option-btn px-4 py-2 border rounded hover:bg-emerald-100">Fast and plot-heavy</button>
+          <button data-q="q1" data-a="Slow and emotional" class="option-btn px-4 py-2 border rounded hover:bg-emerald-100">Slow and emotional</button>
+          <button data-q="q1" data-a="Balanced" class="option-btn px-4 py-2 border rounded hover:bg-emerald-100">Balanced</button>
+          <button data-q="q1" data-a="Light and easy" class="option-btn px-4 py-2 border rounded hover:bg-emerald-100">Light and easy</button>
+          <button data-q="q1" data-a="Intense and thought-provoking" class="option-btn px-4 py-2 border rounded hover:bg-emerald-100">Intense and thought-provoking</button>
+        </div>
+      </div>
+
+      <!-- Question 2 -->
+      <div id="q2" class="space-y-2">
+        <p class="font-medium">2. What kind of world do you want to escape into?</p>
+        <div class="grid gap-2">
+          <button data-q="q2" data-a="Realistic and relatable" class="option-btn px-4 py-2 border rounded hover:bg-emerald-100">Realistic and relatable</button>
+          <button data-q="q2" data-a="Historical" class="option-btn px-4 py-2 border rounded hover:bg-emerald-100">Historical</button>
+          <button data-q="q2" data-a="Magical or fantastical" class="option-btn px-4 py-2 border rounded hover:bg-emerald-100">Magical or fantastical</button>
+          <button data-q="q2" data-a="Futuristic or dystopian" class="option-btn px-4 py-2 border rounded hover:bg-emerald-100">Futuristic or dystopian</button>
+          <button data-q="q2" data-a="Small-town or community-based" class="option-btn px-4 py-2 border rounded hover:bg-emerald-100">Small-town or community-based</button>
+        </div>
+      </div>
+
+      <!-- Question 3 -->
+      <div id="q3" class="space-y-2">
+        <p class="font-medium">3. Pick a main character energy:</p>
+        <div class="grid gap-2">
+          <button data-q="q3" data-a="Soft but secretly powerful" class="option-btn px-4 py-2 border rounded hover:bg-emerald-100">Soft but secretly powerful</button>
+          <button data-q="q3" data-a="Brave but scared" class="option-btn px-4 py-2 border rounded hover:bg-emerald-100">Brave but scared</button>
+          <button data-q="q3" data-a="Smart with emotional damage" class="option-btn px-4 py-2 border rounded hover:bg-emerald-100">Smart with emotional damage</button>
+          <button data-q="q3" data-a="Bubbly outside, overthinking inside" class="option-btn px-4 py-2 border rounded hover:bg-emerald-100">Bubbly outside, overthinking inside</button>
+          <button data-q="q3" data-a="Awkward but loveable" class="option-btn px-4 py-2 border rounded hover:bg-emerald-100">Awkward but loveable</button>
+        </div>
+      </div>
+
+      <!-- Question 4 -->
+      <div id="q4" class="space-y-2">
+        <p class="font-medium">4. What kind of story feels like a hug right now?</p>
+        <div class="grid gap-2">
+          <button data-q="q4" data-a="Cute and romantic" class="option-btn px-4 py-2 border rounded hover:bg-emerald-100">Cute and romantic</button>
+          <button data-q="q4" data-a="Magical but gentle" class="option-btn px-4 py-2 border rounded hover:bg-emerald-100">Magical but gentle</button>
+          <button data-q="q4" data-a="Quiet and heartfelt" class="option-btn px-4 py-2 border rounded hover:bg-emerald-100">Quiet and heartfelt</button>
+          <button data-q="q4" data-a="Fun and adventurous" class="option-btn px-4 py-2 border rounded hover:bg-emerald-100">Fun and adventurous</button>
+          <button data-q="q4" data-a="Reminds me I’m not alone" class="option-btn px-4 py-2 border rounded hover:bg-emerald-100">Reminds me I’m not alone</button>
+        </div>
+      </div>
+
+      <!-- Question 5 -->
+      <div id="q5" class="space-y-2">
+        <p class="font-medium">5. Your book should feel like...</p>
+        <div class="grid gap-2">
+          <button data-q="q5" data-a="A soft lullaby" class="option-btn px-4 py-2 border rounded hover:bg-emerald-100">A soft lullaby</button>
+          <button data-q="q5" data-a="A handwritten letter" class="option-btn px-4 py-2 border rounded hover:bg-emerald-100">A handwritten letter</button>
+          <button data-q="q5" data-a="A sparkler on a summer night" class="option-btn px-4 py-2 border rounded hover:bg-emerald-100">A sparkler on a summer night</button>
+          <button data-q="q5" data-a="A deep breath after crying" class="option-btn px-4 py-2 border rounded hover:bg-emerald-100">A deep breath after crying</button>
+          <button data-q="q5" data-a="A playlist of your favourite songs" class="option-btn px-4 py-2 border rounded hover:bg-emerald-100">A playlist of your favourite songs</button>
+        </div>
       </div>
 
       <button id="confirm" class="w-full py-3 bg-emerald-700 text-white font-semibold rounded-lg hover:bg-emerald-800 transition">
@@ -25,123 +80,33 @@
     </div>
 
     <script>
-      const questions = [
-        {
-          id: "q1",
-          text: "1. What kind of story pace are you in the mood for?",
-          options: [
-            "Fast and plot-heavy",
-            "Slow and emotional",
-            "Balanced",
-            "Light and easy",
-            "Intense and thought-provoking",
-          ],
-        },
-        {
-          id: "q2",
-          text: "2. What kind of world do you want to escape into?",
-          options: [
-            "Realistic and relatable",
-            "Historical",
-            "Magical or fantastical",
-            "Futuristic or dystopian",
-            "Small-town or community-based",
-          ],
-        },
-        {
-          id: "q3",
-          text: "3. Pick a main character energy:",
-          options: [
-            "Soft but secretly powerful",
-            "Brave but scared",
-            "Smart with emotional damage",
-            "Bubbly outside, overthinking inside",
-            "Awkward but loveable",
-          ],
-        },
-        {
-          id: "q4",
-          text: "4. What kind of story feels like a hug right now?",
-          options: [
-            "Cute and romantic",
-            "Magical but gentle",
-            "Quiet and heartfelt",
-            "Fun and adventurous",
-            "Reminds me I’m not alone",
-          ],
-        },
-        {
-          id: "q5",
-          text: "5. Your book should feel like...",
-          options: [
-            "A soft lullaby",
-            "A handwritten letter",
-            "A sparkler on a summer night",
-            "A deep breath after crying",
-            "A playlist of your favourite songs",
-          ],
-        },
-      ];
-
       const answers = {};
-      const container = document.getElementById("quiz-container");
-
-      questions.forEach(({ id, text, options }) => {
-        const section = document.createElement("div");
-        section.className = "space-y-2";
-        section.innerHTML = `<p class="font-medium">${text}</p>`;
-
-        const btnGroup = document.createElement("div");
-        btnGroup.className = "grid grid-cols-1 gap-2";
-
-        options.forEach((opt) => {
-          const btn = document.createElement("button");
-          btn.className =
-            "option-btn btn px-4 py-2 border border-gray-300 rounded-lg hover:bg-emerald-100 transition text-left";
-          btn.dataset.q = id;
-          btn.dataset.a = opt;
-          btn.textContent = opt;
-
-          btn.addEventListener("click", () => {
-            answers[id] = opt;
-            document
-              .querySelectorAll(`[data-q="${id}"]`)
-              .forEach((b) =>
-                b.classList.remove("bg-emerald-200", "ring-2", "ring-emerald-500")
-              );
-            btn.classList.add("bg-emerald-200", "ring-2", "ring-emerald-500");
-          });
-
-          btnGroup.appendChild(btn);
+      document.querySelectorAll('.option-btn').forEach(btn => {
+        btn.addEventListener('click', () => {
+          const q = btn.dataset.q;
+          const a = btn.dataset.a;
+          answers[q] = a;
+          document.querySelectorAll(`[data-q="${q}"]`).forEach(b => b.classList.remove('bg-emerald-200', 'ring-2', 'ring-emerald-500'));
+          btn.classList.add('bg-emerald-200', 'ring-2', 'ring-emerald-500');
         });
-
-        section.appendChild(btnGroup);
-        container.appendChild(section);
       });
 
-      document.getElementById("confirm").addEventListener("click", async () => {
-        const keys = ["q1", "q2", "q3", "q4", "q5"];
-        if (!keys.every((k) => answers[k])) {
-          alert("Please answer all questions!");
+      document.getElementById('confirm').addEventListener('click', async () => {
+        const keys = ['q1', 'q2', 'q3', 'q4', 'q5'];
+        if (!keys.every(k => answers[k])) {
+          alert('Please answer all questions!');
           return;
         }
 
-        const resultDiv = document.getElementById("result");
-        resultDiv.classList.remove("hidden");
-        resultDiv.innerHTML =
-          '<p class="text-gray-700 italic">Fetching recommendation…</p>';
+        const resultDiv = document.getElementById('result');
+        resultDiv.classList.remove('hidden');
+        resultDiv.innerHTML = '<p class="text-gray-700 italic">Fetching recommendation…</p>';
 
         try {
-          const res = await fetch("https://stelliebackend.fly.dev/api/book-recommendation", {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({
-              q1: answers.q1,
-              q2: answers.q2,
-              q3: answers.q3,
-              q4: answers.q4,
-              q5: answers.q5,
-            }),
+          const res = await fetch('https://stelliebackend.fly.dev/api/book-recommendation', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify(answers)
           });
 
           const data = await res.json();
